source/blender/gpu/shaders/gpu_shader_material.glsl
@@ -2967,6 +2967,12 @@ void node_object_info(mat4 obmat, vec3 info, out vec3 location, out float object
 
 void node_normal_map(vec4 tangent, vec3 normal, vec3 texnormal, out vec3 outnormal)
 {
+	if (all(equal(tangent, vec4(0.0, 0.0, 0.0, 1.0)))) {
+		outnormal = normal;
+		return;
+	}
+
+	tangent.xyz = normalize(tangent.xyz);
 	vec3 B = tangent.w * cross(normal, tangent.xyz);
 
 	outnormal = texnormal.x * tangent.xyz + texnormal.y * B + texnormal.z * normal;
